# RISCV-ROCKETCHIP-CNN

./: README.md
Sources_projet_Etudiants/bare_metal/cnn_utilities/: ReadMe Python.txt  conversion.py  do_conversion.sh  do_conversion_date.sh  do_conversion_exp.sh  do_conversion_phelma.sh  files_tree.txt
Sources_projet_Etudiants/bare_metal/cnn_utilities/image_outputs/: classifications
Sources_projet_Etudiants/bare_metal/driver/: CNN_RISCV.c~  CNN_RISCV.h~  convolution.c~  convolution.h~  crt.S~  display.h~  ethlib.c  ethlib.c~  ethlib_back.c  features.h  ff.h  ffconf.h  fonctions_boot.c  fonctions_boot.h  images.h~  lowrisc_memory_map.h  macro_CNN_RISCV.h~  memory.c  softmax.c~  syscalls.c  syscalls.c~  test.ld
Sources_projet_Etudiants/bare_metal/examples/: .gitignore  Makefile  application  application.c  application.h  boot.c  demo_date2020.c  hello.c  hello_phelma.c  my_boot.c~
Sources_projet_Etudiants/bare_metal/examples/cnn/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
Sources_projet_Etudiants/bare_metal/examples/cnn/include/: MaxPoolSE.h  cnn.h  coeffs.h  conv2d.h  img.h  maxPool.h  perceptron.h  reshape.h  sizes.h
Sources_projet_Etudiants/bare_metal/examples/cnn/src/: MaxPoolSE.cpp  cnn.c  cnn.cpp  conv2d.c  conv2d.cpp  maxPool.c  perceptron.c  perceptron.cpp  reshape.c
Sources_projet_Etudiants/bare_metal/examples/cnn/test/: main.cpp
Sources_projet_Etudiants/bare_metal/prebuilt_binaries/: README.MD  contour_affichage_interactif_1_12.riscv  date2020_cnn_et_filtre_interactif  diaporama_1_12.riscv
(+5 files in other folders)
